@@ -1,3 +1,7 @@
+Tue Apr 10 17:04:20 CEST 2012 (tk)
+----------------------------------
+ * libclamav/pe.c: drop old header check (bb#4699)
+
 Thu Mar  1 19:49:21 CET 2012 (tk)
 ---------------------------------
  * clamd: ScanOnAccess now supports ClamAuth on OS X
